--- a/Salon Appointment System.csproj
+++ b/Salon Appointment System.csproj
@@ -65,11 +65,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
+    <Compile Include="obj\Release\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receptionist.cs" />
     <Compile Include="ServiceType.cs" />
+    <Compile Include="StaffMember.cs" />
     <Compile Include="Status.cs" />
     <EmbeddedResource Include="CreateAppointment.resx">
       <DependentUpon>CreateAppointment.cs</DependentUpon>
@@ -80,6 +83,10 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\Salon_Appointment_System.CreateAppointment.resources" />
+    <EmbeddedResource Include="obj\Debug\Salon_Appointment_System.Dashboard.resources" />
+    <EmbeddedResource Include="obj\Debug\Salon_Appointment_System.LoginForm.resources" />
+    <EmbeddedResource Include="obj\Debug\Salon_Appointment_System.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -88,8 +95,14 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="bin\Debug\Salon Appointment System.exe.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\Salon Appointment System.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\Salon Appointment System.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\Salon Appointment System.csproj.GenerateResource.cache" />
+    <None Include="obj\Release\Salon Appointment System.csproj.AssemblyReference.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,15 +112,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\DASHBOARD_BG.png" />
+    <Content Include="bin\Debug\Salon Appointment System.exe" />
+    <Content Include="bin\Debug\Salon Appointment System.pdb" />
+    <Content Include="obj\Debug\Salon Appointment System.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+    <Content Include="Resources\DASHBOARD_BG.png" />
+    <Content Include="Resources\_BG.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\_BG.png" />
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
